// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`beta version 1`] = `
{
  "win": [
    {
      "arch": "arm64",
      "file": "Test App ßW Setup 3.0.0-beta.2 arm64.exe",
      "safeArtifactName": "TestApp-Setup-3.0.0-beta.2.exe",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "Test App ßW Setup 3.0.0-beta.2 arm64.exe.blockmap",
      "safeArtifactName": "TestApp-Setup-3.0.0-beta.2.exe.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "arch": "x64",
      "file": "Test App ßW Setup 3.0.0-beta.2 x64.exe",
      "safeArtifactName": "TestApp-Setup-3.0.0-beta.2.exe",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "Test App ßW Setup 3.0.0-beta.2 x64.exe.blockmap",
      "safeArtifactName": "TestApp-Setup-3.0.0-beta.2.exe.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`icon < 256 1`] = `"ERR_ICON_TOO_SMALL"`;

exports[`icon not an image 1`] = `"ERR_ICON_UNKNOWN_FORMAT"`;

exports[`win zip 1`] = `
{
  "win": [
    {
      "arch": "arm64",
      "file": "Test App ßW-1.1.0-arm64-win.zip",
      "safeArtifactName": "TestApp-1.1.0-arm64-win.zip",
    },
    {
      "arch": "x64",
      "file": "Test App ßW-1.1.0-win.zip",
      "safeArtifactName": "TestApp-1.1.0-win.zip",
    },
  ],
}
`;

exports[`zip artifactName 1`] = `
{
  "win": [
    {
      "arch": "x64",
      "file": "Test App ßW-1.1.0-win-x64.zip",
      "safeArtifactName": "TestApp-1.1.0-win.zip",
    },
  ],
}
`;
